--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -2,7 +2,7 @@
   <nav class="navbar">
     <a href="/" class="navbar-logo">Mappi</i></a>
     <div class="navbar-menu">
-      <a href="/" class="navbar-options">Create Mappi</a>
+      <a href="/maps/" class="navbar-options">Create Mappi</a>
       <a href="/users/<%= user.id %>" class="navbar-options">Dashboard</a>
     </div>
   </nav>
