--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -19,11 +19,11 @@ $black: #000;
   justify-content: space-between;
   align-items: center;
   z-index: 10;
-  height: 60px;
+  height: 70px;
 
   &-logo {
     font-family: Varela Round, sans-serif;
-    font-size: 2rem;
+    font-size: 2.25rem;
     color: $white;
     text-decoration: none;
   }
@@ -270,8 +270,9 @@ form.map-info {
     margin-right: 10px;
   }
 
-  input.save-map {
+  button#save-map {
     @extend %update-buttons;
+
   }
 }
 
@@ -371,23 +372,28 @@ img.user-profile-picture {
   }
 
   div {
-    height: 2.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 3.5rem;
     width: 225px;
     word-wrap: break-word;
     border: dashed 2px $navblue;
     border-radius: 5px;
-    margin-bottom: 10px;
-    padding: 10px;
     text-align: center;
-
+    margin: 15px;
   }
 }
 
 // Homepage
 
-.welcome-container {
+html {
+  scroll-behavior: smooth;
+}
 
-  height: 90vh;
+.welcome-container {
+  width: 100%;
+  height: 95vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -398,13 +404,13 @@ img.user-profile-picture {
       font-size: 2.75rem;
       color: $grey;
       margin-bottom: 20px;
-      margin-left: 15px;
+      margin-left: 30px;
   }
 
   p {
       font-family: Varela Round, sans-serif;
       font-size: 1.25rem;
-      margin-left: 15px;
+      margin-left: 30px;
   }
 }
 
@@ -421,5 +427,58 @@ div.homepage-buttons {
     border-radius: 5px;
     padding: 10px;
     color: $grey;
-    margin: 60px 20px 0 15px;
+    margin: 40px 20px 0 30px;
+}
+
+.view-mappi-button {
+  font-family: Varela Round, sans-serif;
+  font-size: 1.25rem;
+  text-decoration: none;
+  border: 1px solid $grey;
+  border-radius: 5px;
+  padding: 10px;
+  color: $grey;
+  margin-top: 40px;
+}
+
+section#view-mappi {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  h2 {
+    font-family: Varela Round, san-serif;
+    font-size: 2.75rem;
+    margin: 30px 20px 0 20px;
+    color: $grey;
+  }
+
+  div.mappi-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin: 30px;
+    font-family: Varela Round, sans-serif;
+
+    a {
+      text-decoration: none;
+      color: $grey;
+    }
+
+    div {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 3.5rem;
+      width: 225px;
+      word-wrap: break-word;
+      border: dashed 2px $navblue;
+      border-radius: 5px;
+      text-align: center;
+      margin: 20px;
+    }
+  }
 }
