fix bug where improper image url saves incorrectly

--- a/views/map.ejs
+++ b/views/map.ejs
@@ -85,6 +85,7 @@
           imageTag = `<img src="${markers[id].image_url}">`
         } else {
           imageTag = `<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ac/No_image_available.svg/300px-No_image_available.svg.png">`;
+          markers[id].image_url = "https://upload.wikimedia.org/wikipedia/commons/thumb/a/ac/No_image_available.svg/300px-No_image_available.svg.png";
         }
         const contentString = `
         <div class="infowindow" id="infowindow">
