Added more categories and updated hover effects

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,10 +35,15 @@
         <label for="new-map-category" >Map Category</label><br>
         <select id="new-map-category" name="new-map-category" required>
           <option selected="true" disabled="disabled" value="">Choose Category</option>
-          <option value="restaurant">Restaurants</option>
-          <option value="cafe">Cafes</option>
           <option value="bar">Bars</option>
+          <option value="cafe">Cafes</option>
+          <option value="grocery">Groceries</option>
+          <option value="hospital">Hospitals</option>
+          <option value="hotel">Hotels</option>
           <option value="parks">Parks</option>
+          <option value="pharmacy">Pharmacies</option>
+          <option value="restaurant">Restaurants</option>
+          <option value="sightseeing">Sightseeing</option>
         </select>
       </div>
 
