Updated function to auto close infowindow when another pin is clicked, and updated default values for infowindow

--- a/views/map_view.ejs
+++ b/views/map_view.ejs
@@ -24,8 +24,8 @@
     <div class="map-info-side">
 
       <form action="/favourite_maps" method="POST" class="map-info">
-        <h2>Title: <%= mapData.title %></h2>
-        <h4>Description: <%= mapData.description %></h4>
+        <h2><%= mapData.title %></h2>
+        <h4><%= mapData.description %></h4>
         <div class="fav-save-buttons">
           <input class="fav-map" type="submit" value="Fav Mappi">
           <button class="save-map" id="save-map" type="submit" onclick="saveMap()">Save Mappi</button>
@@ -98,7 +98,7 @@
             <h1>${markers[id].title}</h1>
             ${imageTag}
             <p>${markers[id].description}</p>
-            <button onclick="deleteMarker(${id})" id="deletebtn${id}">Delete</button>
+            <button onclick="deleteMarker(${id})" id="deletebtn${id}" class="deletebtn"</button>
         </div>
         `;
         markers[id].infoWindowContent = contentString;
@@ -110,7 +110,7 @@
     const editMarker = function(id) {
       // console.log('Editing marker ', id);
       let form = document.querySelector("div.update-pin");
-      document.getElementById('update-pin-id').innerHTML = `Edit Mappi Pin id: ${id}` // change this to title
+      document.getElementById('update-pin-id').innerHTML = `Edit Pin ${id}` // change this to title
       form.style.display = 'flex';
       document.querySelector("input#update-pin-title").focus();
       document.querySelector('#update-pin-button').innerHTML=`<button id="save-pin-local" onclick="savePin(${id})">Save Pin</button>`;
@@ -137,9 +137,9 @@
       const id = uniqueId(); // get new id
       const marker = new google.maps.Marker({ // create a marker and set id
           id: id, // this should auto increment, but for local use we manually
-          title:'',
-          description:'',
-          image_url:'',
+          title:'No Title',
+          description:'No Description',
+          image_url:'https://upload.wikimedia.org/wikipedia/commons/thumb/a/ac/No_image_available.svg/300px-No_image_available.svg.png',
           user_id: currentUser.id,
           position: position,
           map: map,
@@ -151,10 +151,13 @@
             <div class="infowindow" id="infowindow">
               <h1>Make a title :)</h1>
               <img src="https://i.imgur.com/uVU4ffo.jpg">
-              <p>add a short description please!</p>
-              <button onclick="deleteMarker(${id})" id="deletebtn${id}">Delete</button>
+              <p>Edit information in this window using the form on the right</p>
+              <button onclick="deleteMarker(${id})" id="deletebtn${id}" class="deletebtn">Delete</button>
             </div>`
       });
+      if (infowindow){
+          infowindow.close();
+        }
       infowindow = new google.maps.InfoWindow({
         content: marker.infoWindowContent,
       });
@@ -206,7 +209,7 @@
               <h1>${newMarkers[marker].title}</h1>
               <img src="${newMarkers[marker].image_url}">
               <p>${newMarkers[marker].description}</p>
-              <button onclick="deleteMarker(${id})" id="deletebtn${id}">Delete</button>
+              <button onclick="deleteMarker(${id})" id="deletebtn${id}" class="deletebtn">Delete</button>
             </div>`
           });
           markers[newMarker.id] = newMarker;
