change form. to div.

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -282,7 +282,7 @@ button#save-pin-local:hover {
 
 // View mappi page
 
-form.map-info {
+div.map-info {
   height: 200px;
   background-color: $formblue;
   color: $grey;
