--- a/views/map_view.ejs
+++ b/views/map_view.ejs
@@ -23,16 +23,18 @@
 
     <div class="map-info-side">
 
-      <form action="/favourite_maps" method="POST" class="map-info">
+      <!-- <div action="/favourite_maps" method="POST" class="map-info"> -->
+      <div class="map-info">
         <h2><%= mapData.title %></h2>
         <h4><%= mapData.description %></h4>
         <div class="fav-save-buttons">
           <input class="fav-map" type="submit" value="Fav Mappi">
-          <button class="save-map" id="save-map" type="submit" onclick="saveMap()">Save Mappi</button>
+          <button class="save-map" id="save-map" onclick="saveMap()">Save Mappi</button>
           <input hidden id="user_id" type="number" name="user_id" value=<%= user.id %>>
           <input hidden id="map_id" type="number" name="map_id" value= <%= mapData.id %>>
         </div>
-      </form>
+      </div>
+
 
       <div class="update-pin">
         <h2 id="update-pin-id">Edit Mappi Pin</h2>
@@ -228,20 +230,15 @@
       }
     function initMap() {
       // The location of Uluru
-      const myLatlng = { lat: -25.363, lng: 131.044 };
 
       const location = { lat: <%=mapData.lat%>, lng: <%=mapData.lng%> }; // make api request to user current locaiton?
 
       // The map, centered at Uluru
       map = new google.maps.Map(document.getElementById("map"), {
-        zoom: 4,
+        zoom: <%= mapData.zoom %>,
         center: location,
       });
 
-      let infoWindow = new google.maps.InfoWindow({
-        content: "Click the map to get Lat/Lng!",
-        position: myLatlng,
-      });
       // // Configure the click listener.
       map.addListener("click", (mapsMouseEvent) => {
         const latLng = {
@@ -272,16 +269,38 @@
       return newObj;
     };
 
+
+    const getMapData = (id) => {
+      const currentMapData = {
+        id: id,
+        lat: map.getCenter().lat(),
+        lng: map.getCenter().lng(),
+        zoom: map.getZoom()
+      };
+      console.log(currentMapData);
+      return currentMapData;
+    };
+
     const saveMap = function() {
+      console.log('running put');
       $.ajax({
           url: '/pins',
           method: 'PUT',
           data: parsePins(markers),
-        })
-        .done(response => {
+      }).done(response => {
+        console.log(response);
+        $.ajax({
+          url:`/maps/${mapId}`,
+          method: 'PUT',
+          data: getMapData(mapId)
+        }).done(res => {
+          console.log(res);
           window.location.replace(`/users/${currentUser.id}`); //go home
         });
-      }
+      });
+
+
+    }
 
 
 
