Updated yeahh to yeah

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -17,7 +17,7 @@
   <%- include('partials/_header', {user: user}); %>
   <div class="welcome-container">
     <h1>Welcome to Mappi</h1>
-    <p>We like maps because they are cool, and we think you should like maps too because.......yeahh</p>
+    <p>We like maps because they are cool, and we think you should like maps too because.......yeah</p>
     <div class="homepage-buttons">
         <a href="/maps/" class="create-mappi-button">Create Mappi</a>
         <a href="#view-mappi" class="view-mappi-button">View Mappi</a>
