Fixed bug in delete button

--- a/views/map_view.ejs
+++ b/views/map_view.ejs
@@ -100,7 +100,7 @@
             <h1>${markers[id].title}</h1>
             ${imageTag}
             <p>${markers[id].description}</p>
-            <button onclick="deleteMarker(${id})" id="deletebtn${id}" class="deletebtn"</button>
+            <button onclick="deleteMarker(${id})" id="deletebtn${id}" class="deletebtn">Delete</button>
         </div>
         `;
         markers[id].infoWindowContent = contentString;
