--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -171,8 +171,8 @@ div#map {
     border: 1px solid $red;
     border-radius: 5px;
     color: $white;
-    height: 1.5rem;
-    margin-right: 5px;
+    min-height: 1.5rem;
+    min-width: 4rem;
   }
 
   button.deletebtn:hover {
