Updated category values

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,18 +32,18 @@
       </div>
 
       <div class="new-map-category">
-        <label for="new-map-category" >Map Category</label><br>
+        <label for="new-map-category">Map Category</label><br>
         <select id="new-map-category" name="new-map-category" required>
           <option selected="true" disabled="disabled" value="">Choose Category</option>
-          <option value="bar">Bars</option>
-          <option value="cafe">Cafes</option>
-          <option value="grocery">Groceries</option>
-          <option value="hospital">Hospitals</option>
-          <option value="hotel">Hotels</option>
-          <option value="parks">Parks</option>
-          <option value="pharmacy">Pharmacies</option>
-          <option value="restaurant">Restaurants</option>
-          <option value="sightseeing">Sightseeing</option>
+          <option value="Bars">Bars</option>
+          <option value="Cafes">Cafes</option>
+          <option value="Groceries">Groceries</option>
+          <option value="Hospitals">Hospitals</option>
+          <option value="Hotels">Hotels</option>
+          <option value="Parks">Parks</option>
+          <option value="Pharmacies">Pharmacies</option>
+          <option value="Restaurants">Restaurants</option>
+          <option value="Sightseeing">Sightseeing</option>
         </select>
       </div>
 
